infra/k8s-minikube/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: proshop.dev
      http:
        paths:
          - path: /api/products/?(.*)
            backend:
              serviceName: backend-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 3000
